--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+img {
+  text-align: center;
+  margin-left: 150px;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  background: grey;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+figcaption {
+  font-size: 10px;
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#details {
+  margin-top: 20px;
+}
+#details div {
+  display: block;
+  float: left;
+  background-color: red;
+  width: 25%;
+  text-align: center;
+}
